Shrink line height to avoid wasted whitespace
2em is too cozy, 3em is too spacious, 2.5em hits just right.

--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ canvas:hover {
 }
 
 textarea {
-  line-height: 3em;
+  line-height: 2.5em;
   margin: 0;
   outline: none;
   overscroll-behavior: none;
